client/server code test

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,7 +15,15 @@
         <dependency>
             <groupId>fr.mleduc.kmf</groupId>
             <artifactId>model</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kevoree.modeling.plugin</groupId>
+            <artifactId>websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
         </dependency>
     </dependencies>
 
