--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,21 @@
         <kmf.version>4.27.1-SNAPSHOT</kmf.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.kevoree.modeling.plugin</groupId>
+                <artifactId>websocket</artifactId>
+                <version>4.27.4-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>io.reactivex</groupId>
+                <artifactId>rxjava</artifactId>
+                <version>1.1.3</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
